WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265934
[web-animations] effect targeting an element with `display: none` should not schedule immediate animation resolution (affects reddit.com)
https://bugs.webkit.org/show_bug.cgi?id=265934
Summary
[web-animations] effect targeting an element with `display: none` should not ...
Antoine Quint
Reported
2023-12-06 01:53:25 PST
If an effect targets an element with `display: none` it will currently schedule immediate animation resolution. This affects reddit.com which chews a lot of CPU scheduling animation frames at 60Hz while not performing any visible animations.
Attachments
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2023-12-06 01:54:10 PST
rdar://119191813
Antoine Quint
Comment 2
2023-12-06 01:59:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21384
EWS
Comment 3
2023-12-06 09:35:25 PST
Committed
271614@main
(452ca171058f): <
https://commits.webkit.org/271614@main
> Reviewed commits have been landed. Closing PR #21384 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug